Added skip random quest card. (Added new system for it that saves all the skipped quests to the database) Also fixed a couple of bugs related to active quests
Signed-off-by: trolca <szgiemza@gmail.com>